# generate-ads-data

./: .cursorignore  .envrc  .gitignore  .pre-commit-config.yml  ADVERTISER_QUICK_REFERENCE.md  ADVERTISER_README_CODEX.md  ADVERTISER_README_GPT.md  MEDIUM_ARTICLE.md  METRICFLOW_TESTING.md  Makefile  POETRY_AUTO_ACTIVATION.md  README.md  Untitled-2  Untitled-3  WORKFLOW_VISUAL.md  activate_env.sh  advertiser_demo.py  advertiser_demo_output.txt  cli.py  config.yml  create.sqlite3-query  db_utils.py  join_.sqlite3-query  medium_article_optimized.md  pyproject.toml  pytest.ini  requirements.txt  run_all.sh  setup_shell.sh  test_metricflow.sh
cli_templates/: README-streamlined.md  README.md
dbt_ads_project/: .user.yml  README.md  campaign_summary.csv  dbt.duckdb  dbt_project.yml  hourly_performance.csv  profiles.yml  query_duckdb.py
dbt_models/: .user.yml  CODEX_TODO.rst  DBT_CHEATSHEET.md  METRICFLOW_CHEATSHEET.md  README.md  README_SEMANTIC_LAYER.md  SETUP_GUIDE.md  SUCCESS_SUMMARY.md  TDD_EXAMPLE_WORKFLOW.md  TDD_PROCESS_FOR_CHATGPT.md  TDD_QUICK_REFERENCE.md  TODO.rst  dbt_models.duckdb  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  profiles_alternatives.yml  requirements.txt  run_dbt_models.sh  setup_duckdb.py  test_setup.py
factories/: DESIGN.md  faker_providers.py
models/: __init__.py  enums.py  orm.py  registry.py  registry_example.py  schemas.py
services/: ab_testing_service.py  analytics_service.py  campaign_service.py  campaign_variation_service.py  comparison_service.py  creative_service.py  erd_service.py  export_service.py  (+8 more)
(+67 files in other folders)
