[tool.poetry]
name = "generate-ads-data"
version = "0.1.0"
description = "A comprehensive platform for generating realistic Netflix ads data using modern Python technologies"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "^8.1.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
faker = "^20.0.0"
rich = "^13.0.0"
colorlog = "^6.8.0"
dbt-duckdb = "^1.9.4"
dbt-metricflow = "^0.8.2"
pandas = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
ruff = "^0.1.0"
dbt-metricflow = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py310']

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
lines-after-imports = 2

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
